<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sonuc"
    tools:context=".ResultActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/card_bg"
        android:padding="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="5dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/sonuc"
                android:textColor="#FFFFFF"
                android:textSize="60sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="125dp"
                android:layout_marginRight="25dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:background="@drawable/option_bg">

                <TextView
                    android:id="@+id/correctAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:textColor="@color/purple_500"
                    android:textSize="75sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:id="@+id/slash"
                    android:text="@string/simge"
                    android:textColor="@color/purple_500"
                    android:textSize="75sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/totalAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_Ten"
                    android:textColor="#FFFFFF"
                    android:textSize="75sp">

                </TextView>


            </LinearLayout>

            <TextView
                android:id="@+id/performance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="260dp"
                android:text="@string/performans"
                android:textColor="@android:color/transparent"
                android:textSize="45sp"
                android:textStyle="bold|italic">

            </TextView>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>